[package]
name = "spectre"
version = "0.5.1"
edition = "2021"
authors = ["niklaslong <niklas@long.ch>"]
description = "A lightweight toolkit for analysing p2p network topologies."
license = "MIT"
repository = "https://github.com/niklaslong/spectre"
documentation = "https://docs.rs/spectre"
readme = "README.md"
categories = ["algorithms"]
keywords = ["p2p", "peer-to-peer", "networking"]
exclude = [
    "testdata/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.31"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
