[package]
name = "spectre"
version = "0.4.0"
edition = "2021"
authors = ["niklaslong <niklas@long.ch>"]
description = "A lightweight toolkit for analysing p2p network topologies."
license = "MIT"
repository = "https://github.com/niklaslong/spectre"
documentation = "https://docs.rs/spectre"
readme = "README.md"
categories = ["algorithms"]
keywords = ["p2p", "peer-to-peer", "networking"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
nalgebra = "0.31"
